infra/kubernetes/https-lb/ingress.yaml
# This resource configures the HTTPS load balancer that is used as the
# entrypoint to all HTTPS services running in the cluster.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    networking.gke.io/managed-certificates: tazj-in, www-tazj-in
spec:
  # Default traffic is routed to the blog, in case people go to
  # peculiar hostnames.
  backend:
    serviceName: tazblog
    servicePort: 8000
